[package]
name = "thin-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
warp = "0.3"
futures = "0.3"
tokio-tungstenite = { version = "0.16", features = ["native-tls", "rustls", "tokio-rustls"] }
tungstenite = "0.17"
dashmap = "5.0"
serde_json = "1.0"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
logging = "0.1.0"
